# roomkit

./: .gitignore  Cargo.toml
src/: home.rs  lib.rs
src/action_types/: did_enter.rs  mod.rs  time_of_day.rs
src/device/: generic_device.rs  mod.rs
src/home/: mod.rs  room.rs  test_action.rs
src/integrations/: hue_bridge.rs  mod.rs
src/integrations/hue_bridge/: mod.rs  toggle_light.rs
